[package]
name = "trayicon"
version = "0.1.0-beta.11"
authors = ["Jari Otto Oskari Pennanen <ciantic@oksidi.com>"]
edition = "2018"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ciantic/trayicon-rs/"
repository = "https://github.com/ciantic/trayicon-rs/"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "commctrl", "basetsd"] }

[dependencies]
winit = { version = "0.22.2", optional = true }
crossbeam-channel = { version = "0.4.2", optional = true }

[lib]
name = "trayicon"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = [
    "examples/winit",
    "examples/winapi",
    "examples/crossbeam",
]

[features]
default = []