[package]
name = "trayicon"
version = "0.2.0"
authors = ["Jari Otto Oskari Pennanen <ciantic@oksidi.com>"]
edition = "2021"
description = "Tray Icon, that thing in the corner"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ciantic/trayicon-rs/"
repository = "https://github.com/ciantic/trayicon-rs/"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "libloaderapi",
    "basetsd",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSStatusBar", "NSStatusItem", "NSMenu", "NSMenuItem", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString"] }

[lib]
name = "trayicon"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
all-features = true

[workspace]
members = ["examples/winit", "examples/winapi", "examples/crossbeam", "examples/macos"]

[features]
default = []
