[package]
name = "trayicon-crossbeam-example"
version = "0.0.1"
authors = ["Jari Otto Oskari Pennanen"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "windef", "minwindef", "shellapi", "libloaderapi", "commctrl", "basetsd"] }
crossbeam-channel = "0.4.2"
trayicon = { path = "../../", features = ["crossbeam-channel"] }
