[package]
name = "trayicon-winapi-example"
version = "0.0.1"
authors = ["Jari Otto Oskari Pennanen"]
edition = "2018"
publish = false

[dependencies]
winapi = { version = "0.3.9", features = [
    "winuser",
    "windef",
    "minwindef",
    "shellapi",
    "libloaderapi",
    "commctrl",
    "basetsd",
] }
trayicon = { path = "../../" }
